# SP2NOC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Flit.h  INOCCore.cpp  INOCCore.h  NOC.cpp  NOC.h
src/hw/rtl/: counter.v
src/hw/rtl/obj_dir/: Vcounter.cpp  Vcounter.h  Vcounter__ALLcls.d  Vcounter__ALLsup.cpp  Vcounter__ver.d  Vcounter_classes.mk
verilog/rtl/: arbiter.v  counter.v  fifo.v  packetizer.v  switch.v
verilog/rtl/obj_dir/: Vcounter.cpp  Vcounter.h  Vcounter.mk  Vcounter__ALLsup.d  Vcounter__Syms.cpp  Vcounter__Syms.h  Vfifo.cpp  Vfifo.h  Vfifo.mk  Vfifo__ALLcls.cpp  Vfifo__ALLcls.d  Vfifo__ALLsup.cpp  Vfifo__ALLsup.d  Vfifo__Syms.cpp  Vfifo__Syms.h  Vfifo__ver.d  Vfifo_classes.mk
